--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,24 @@
-# Ignorar pasta node_modules (útil para React e JavaScript)
-node_modules/
-
-# Ignorar arquivos de log
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignorar arquivos de ambiente
-.env
+node_modules
+dist
+dist-ssr
+*.local
 
-# Ignorar arquivos gerados pelo build
-dist/
-build/
-
-# Modelo frontend
-modelo/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
