--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "protifolio-2025",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://alexfvc.github.io/Portifolio2025/Protifolio-2025",
+  "homepage": "https://alexfvc.github.io/Portifolio2025",
   "type": "module",
   "scripts": {
     "start": "react-scripts start",
@@ -11,8 +11,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
-
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
