--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "dev": "vite --host"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
