--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "preview": "vite preview",
     "predeploy": "npm rum build",
     "deploy": "gh-pages -b main -d dist"
-
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -24,7 +23,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "vite-plugin-mkcert": "^1.17.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
