--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "protifolio-2025",
+  "engines": {
+    "node": "22.x"
+  },
   "private": true,
   "version": "0.0.0",
   "homepage": "https://alexfvc.github.io/Portifolio2025",
